# tui-x

./: CLAUDE.md  Cargo.toml
examples/: debug_json.rs  debug_json2.rs  test_api.rs  test_dm.rs  test_dm2.rs  test_dm3.rs  test_dm_all.rs  test_dm_conv.rs  test_dm_find.rs  test_dm_hussein.rs  test_e2ee.rs  test_e2ee_recover.rs  test_media.rs  test_xchat.rs
src/: app.rs  lib.rs  main.rs
src/api/: client.rs  endpoints.rs  graphql.rs  juicebox.rs  mod.rs  models.rs  rate_limit.rs  xchat.rs
src/auth/: credentials.rs  mod.rs  store.rs
src/config/: mod.rs
src/tui/: image_cache.rs  mod.rs  theme.rs
src/tui/views/: compose.rs  dm_conversation.rs  dm_inbox.rs  mod.rs  profile.rs  timeline.rs  tweet_detail.rs
src/tui/widgets/: mod.rs  status_bar.rs  text_input.rs  tweet_card.rs
