[package]
name = "tui-x"
version = "0.1.0"
edition = "2024"
description = "A TUI client for X/Twitter"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTML/JS parsing
scraper = "0.22"
regex = "1"

# Images
ratatui-image = { version = "9.0.0", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"

# Utility
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rand = "0.9"
