[package]
name = "tui-x"
version = "0.1.0"
edition = "2024"
description = "A TUI client for X/Twitter"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTML/JS parsing
scraper = "0.22"
regex = "1"

# Images
ratatui-image = { version = "9.0.0", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"

# Crypto (E2EE DM decryption via Juicebox protocol)
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
curve25519-dalek = { version = "4", features = ["group", "rand_core"] }
chacha20poly1305 = "0.10"
blake2 = "0.10"
ciborium = "0.2"
snow = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hex-literal = "0.4"

# Utility
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rand = "0.9"
